fixed a small bug realated to text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
 .App {
   text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
-
+.MainPage {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 .trademark {
   color: #060606;
   text-shadow: 0px 4px 10px rgba(179, 147, 211, 0.8);
@@ -25,6 +33,7 @@ h3 {
 }
 
 form {
+  margin-top: 20vh;
   display: flex;
   align-items: center;
   flex-direction: column;
